# restaurant-sales

./: LICENSE  README.md  pyproject.toml
data/: food_items.csv  sales.csv
restaurant_sales/: __init__.py  __main__.py
